--- a/dash/templates/dash/dashboard_workspaces_ajax.html
+++ b/dash/templates/dash/dashboard_workspaces_ajax.html
@@ -11,7 +11,7 @@
                                 <span class="material-icons" title="Privado">{% if not ws.is_public %}
                                     lock{% endif %}</span>
                                 <span class="material-icons">{% if not ws.is_clonable %}content_copy{% endif %}</span>
-                                <span class="flow-text" title="Puede copiarse">Workspace: {{ ws.name }}</span>
+                                <span class="flow-text" title="Puede copiarse">Espacio de trabajo: {{ ws.name }}</span>
                             </a>
                         </div>
                     </div>
