--- a/dash/templates/dash/layouts/base_placeholder_edit.html
+++ b/dash/templates/dash/layouts/base_placeholder_edit.html
@@ -3,8 +3,8 @@
 {% if widget_cells %}
 <div class="row center">
     <a href="{% if workspace %}{% url 'dash:dash.plugin_widgets' placeholder_uid=placeholder.uid workspace=workspace %}{% else %}{% url 'dash:dash.plugin_widgets' placeholder_uid=placeholder.uid %}{% endif %}"
-       class="add-plugin waves-effect waves-light btn blue" title="{% trans 'Add widget' %}">
-        Añadir nuevo widget
+       class="add-plugin waves-effect waves-light btn blue" title="Añadir nuevo pin">
+        Añadir nuevo pin
     </a>
 </div>
 {% endif %}
@@ -15,15 +15,15 @@
     <div id="{{ plugin.html_id }}" class="plugin {{ plugin.html_class }}" data-id="{{ plugin.position }}">
         <div class="ventana-pin blue">
             <a href="{% url 'dash:dash.delete_dashboard_entry' entry.pk %}" class="remove-plugin"
-               title="{% trans 'Remove widget' %}">
+               title="Eliminar pin">
                 <span class="material-icons">close</span>
             </a>
             <a href="{% url 'dash:dash.edit_dashboard_entry' entry.pk %}" class="edit-plugin"
-               title="{% trans 'Edit widget' %}">
+               title="Editar pin">
                 <span class="material-icons">edit</span>
             </a>
             <a href="{% url 'dash:dash.copy_dashboard_entry' entry.pk %}" class="copy-plugin"
-               title="{% trans 'Copy widget' %}">
+               title="Copiar pin">
                 <span class="material-icons">content_copy</span>
             </a>
         </div>
