--- a/dash/templates/dash/layouts/base_placeholder_view.html
+++ b/dash/templates/dash/layouts/base_placeholder_view.html
@@ -5,7 +5,7 @@
     <div id="{{ plugin.html_id }}" class="plugin {{ plugin.html_class }}">
         <div class="ventana-pin blue" style="display: block;">
             <a href="{% url 'dash:dash.copy_dashboard_entry' entry.pk %}" class="copy-plugin"
-               title="{% trans 'Copy widget' %}">
+               title="Copiar pin">
                 <span class="material-icons">content_copy</span>
             </a>
         </div>
