--- a/dash/templates/dash/plugin_widgets_ajax.html
+++ b/dash/templates/dash/plugin_widgets_ajax.html
@@ -5,7 +5,7 @@
         <div class="col s12">
             <div class="wrapper-bg"></div>
             <div class="row center">
-                <h2>Añadir nuevo widget.</h2>
+                <h2>Añadir nuevo pin.</h2>
             </div>
 
             <div class="row">
