--- a/dash/templates/dash/layouts/placeholder_edit.html
+++ b/dash/templates/dash/layouts/placeholder_edit.html
@@ -2,7 +2,7 @@
 
 <div class="row center">
     <a href="{% if workspace %}{% url 'dash:dash.plugin_widgets' placeholder_uid=placeholder_uid workspace=workspace %}{% else %}{% url 'dash:dash.plugin_widgets' placeholder_uid=placeholder_uid %}{% endif %}"
-       class="add-plugin waves-effect waves-light btn blue" title="{% trans 'Add widget' %}">
-        Añadir nuevo widget
+       class="add-plugin waves-effect waves-light btn blue" title="Añadir nuevo pin">
+        Añadir nuevo pin
     </a>
 </div>
