--- a/dash/templates/public_dashboard/public_dashboard.html
+++ b/dash/templates/public_dashboard/public_dashboard.html
@@ -24,13 +24,13 @@
                     <div>
                         <ul class="collapsible" data-collapsible="accordion">
                             <li>
-                                <div class="collapsible-header">{{ workspaces|length }} Workspaces</div>
+                                <div class="collapsible-header">{{ workspaces|length }} Espacios de trabajo</div>
                                 <div class="collapsible-body">
                                     {% for ws in workspaces %}
                                         <div class="col s3">
                                             <div class="card {% if ws == current_workspace %}grey lighten-1{% endif %}">
                                                 <a href="{% url 'dash:dash.public_dashboard' user.username ws.slug %}"
-                                                   title="Workspace {{ ws.name }}">
+                                                   title="Espacios de trabajo {{ ws.name }}">
                                                     <p class="flow-text">
                                                         <span class="material-icons">dashboard</span>
                                                         <span>{{ ws.name }}</span> -
