--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -35,7 +35,7 @@
     </li>
     <li><a href="{% url "user_profile:config_profile" %}"><i class="material-icons">settings</i>Configuración</a></li>
     <li><a href="/messages/inbox/"><i class="material-icons">email</i>Mensajes privados</a></li>
-    <li><a href="{% url "dash:dash.dashboard_workspaces" %}"><i class="material-icons">dashboard</i>Workspaces</a></li>
+    <li><a href="{% url "dash:dash.dashboard_workspaces" %}"><i class="material-icons">dashboard</i>Espacios de trabajo</a></li>
 {#    <li><a href="{% url "user_services" %}"><i class="material-icons">room_service</i>Servicios</a></li>#}
     <li>
         <div class="divider"></div>
