--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -160,7 +160,7 @@
         <div class="col s12 m12 l10 offset-l1 workspaces">
             <div class="row">
                 <span id="close-workspaces" class="material-icons right">close</span>
-                <h3 class="workspaces-title">Workspaces de {{ user_profile.username }}</h3>
+                <h3 class="workspaces-title">Espacios de trabajos de {{ user_profile.username }}</h3>
             </div>
             <div class="row">
                 <div class="col l12 m12 s12 wrapper-workspaces">
