--- a/photologue/templates/photologue/ajax_load_replies.html
+++ b/photologue/templates/photologue/ajax_load_replies.html
@@ -28,10 +28,11 @@
                         <h2 class="h22"><a
                             href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                             {% if node.parent %}
-                            <span class="chip">
-                                {% avatar node.parent.author %}
+                           <div class="divider"></div>
+                                            <div class="row z-depth-1-half">
+                                {% avatar node.parent.author 40 %}
                                 <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
-                            </span>
+                            </div>
                             {% endif %}
                         </h2>
                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
