--- a/photologue_groups/templates/photologue_groups/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/publication_detail.html
@@ -6,13 +6,11 @@
 {% load mptt_tags %}
 {% load embed_video_tags %}
 {% load group_utils %}
+{% load emoji_tags %}
 {% load static %}
 {% block extra-css %}
-{% load static %}
-
         <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}">
         <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
-
 {% endblock %}
 
 {% block title %}Publicacion #{{ publication_id }}{% endblock %}
@@ -45,18 +43,19 @@
                                     <h2 class="author-header"><a
                                             href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                                         {% if node.parent %}
-                                            <span class="chip">
-                                                        {% avatar node.parent.author %}
+                                            <div class="divider"></div>
+                                            <div class="row z-depth-1-half">
+                                                        {% avatar node.parent.author 40 %}
                                                         <a
-                                                    href="{% url "publications_gallery_groups:publication_photo_detail" node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
-                                                </span>
+                                                    href="{% url "publications_gallery_groups:publication_photo_detail" node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                                                </div>
                                         {% endif %}
                                     </h2>
                                     <div class="row">
                                         <div class="parrafo comment">
                                             <p
                                                class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                                            <div class="wrp-comment">{{ node.content|safe }}</div>
+                                            <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                                         </div>
                                         <div class="show-more" id="show-comment-{{ node.pk }}">
                                             <a href="#">+ Mostrar más</a>
