--- a/photologue_groups/templates/photologue_groups/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/publications_entries.html
@@ -4,6 +4,7 @@
 {% load avatar_tags %}
 {% load mptt_tags %}
 {% load embed_video_tags %}
+{% load emoji_tags %}
 {% load group_utils %}
 {% load static %}
 {% for node in publications %}
@@ -22,16 +23,17 @@
                         <h2 class="h22"><a
                             href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                             {% if node.parent %}
-                            <span class="chip">
-                                {% avatar node.parent.author %}
-                                <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
-                            </span>
+                            <div class="divider"></div>
+                                            <div class="row z-depth-1-half">
+                                {% avatar node.parent.author 40 %}
+                                <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                            </div>
                             {% endif %}
                         </h2>
                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                         <div class="row publication-content">
                             <div class="parrafo comment">
-                                <div class="wrp-comment">{{ node.content|safe }}</div>
+                                <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                 <a href="#">+ Mostrar más</a>
