--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -5,6 +5,8 @@
 {% load embed_video_tags %}
 {% load group_utils %}
 {% load static %}
+{% load emoji_tags %}
+
 <div id="list-publications" class="infinite-container">
     {% for node in publications %}
         <div class="row infinite-item wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
@@ -24,7 +26,7 @@
                                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                                         <div class="row publication-content">
                                             <div class="parrafo comment">
-                                                <div class="wrp-comment">{{ node.content|safe }}</div>
+                                                <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                                             </div>
                                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                                 <a href="#">+ Mostrar más</a>
