--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -2,6 +2,7 @@
 {% load humanize %}
 {% load embed_video_tags %}
 {% load app_filters %}
+{% load emoji_tags %}
 {% load static %}
 <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ group_profile.pk }}">
         <div class="wrapper">
@@ -18,16 +19,17 @@
                                 <h2 class="h22"><a
                                         href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                                     {% if node.parent %}
-                                        <span class="chip">
-                                                        {% avatar node.parent.author %}
+                                        <div class="divider"></div>
+                                            <div class="row z-depth-1-half">
+                                                        {% avatar node.parent.author 40 %}
                                                         <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
-                                                </span>
+                                                </div>
                                     {% endif %}
                                 </h2>
                                 <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                                 <div class="row publication-content">
                                     <div class="parrafo comment">
-                                        <div class="wrp-comment">{{ node.content|safe }}</div>
+                                        <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                                     </div>
                                     <div class="show-more" id="show-comment-{{ node.pk }}">
                                         <a href="#">+ Mostrar más</a>
