--- a/skyfolk/templates/channels/new_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_group_publication_detail.html
@@ -3,6 +3,7 @@
 {% load app_filters %}
 {% load humanize %}
 {% load mptt_tags %}
+{% load emoji_tags %}
 {% load embed_video_tags %}
 {% load static %}
             <div class="row row-pub infinite-item" id="pub-{{ node.pk }}" data-id="{{ group_profile.pk }}" {% if node.parent %}data-parent="{{ node.parent.id }}"{% endif %}>
@@ -18,18 +19,19 @@
                                     <h2 class="author-header"><a
                                             href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                                         {% if node.parent %}
-                                            <span class="chip">
-                                                        {% avatar node.parent.author %}
+                                            <div class="divider"></div>
+                                            <div class="row z-depth-1-half">
+                                                        {% avatar node.parent.author 40 %}
                                                         <a
-                                                    href="/publication_pdetail/{{ node.parent.id }}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
-                                                </span>
+                                                    href="/publication_pdetail/{{ node.parent.id }}">@{{ node.parent.author }}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                                                </div>
                                         {% endif %}
                                     </h2>
                                     <div class="row">
                                         <div class="parrafo comment">
                                             <p
                                                class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                                            <div class="wrp-comment">{{ node.content|safe }}</div>
+                                            <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                                         </div>
                                         <div class="show-more" id="show-comment-{{ node.pk }}">
                                             <a href="#">+ Mostrar más</a>
