--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -3,6 +3,7 @@
 {% load app_filters %}
 {% load humanize %}
 {% load embed_video_tags %}
+{% load emoji_tags %}
 {% load static %}
 <div class="row row-pub infinite-item" id="pub-{{ node.pk }}" {% if node.parent %}data-parent="{{ node.parent.id }}"{% endif %}>
     <div class="col s12">
@@ -16,18 +17,19 @@
                     <h2 class="author-header"><a
                         href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                         {% if node.parent %}
-                        <span class="chip">
-                            {% avatar node.parent.author %}
+                        <div class="divider"></div>
+                            <div class="row z-depth-1-half">
+                            {% avatar node.parent.author 40 %}
                             <a
-                            href="/publication/{{ node.parent.id }}">@{{node.parent.author}}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
-                        </span>
+                            href="/publication/{{ node.parent.id }}">@{{node.parent.author}}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                            </div>
                         {% endif %}
                     </h2>
                     <div class="row">
                         <div class="parrafo comment">
                             <p
                             class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                            <div class="wrp-comment">{{ node.content|safe }}</div>
+                            <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                         </div>
                         <div class="show-more" id="show-comment-{{ node.pk }}">
                             <a href="#">+ Mostrar más</a>
@@ -41,7 +43,7 @@
                             <span class="card-title"><a
                                 href="{% url 'user_profile:profile' node.shared_publication.author %}">@{{ node.shared_publication.author }}</a>
                                 <i class="blue-text text-darken-2"> {{ node.shared_publication.created|naturaltime }}</i></span>
-                                <p>{{ node.shared_publication.content|safe }}</p>
+                                <p>{{ node.shared_publication.content|emoji_replace|safe }}</p>
                                 {% with node.shared_publication.images.all as images %}
                                 {% if images %}<br>
                                 <div class="row">
