--- a/skyfolk/templates/channels/new_video_publication_detail.html
+++ b/skyfolk/templates/channels/new_video_publication_detail.html
@@ -3,6 +3,7 @@
 {% load app_filters %}
 {% load humanize %}
 {% load embed_video_tags %}
+{% load emoji_tags %}
 {% load static %}
 <div class="row row-pub infinite-item" {% if node.parent %}data-parent="{{ node.parent.id }}"{% endif %}>
     <div class="col s12">
@@ -18,18 +19,19 @@
                         <h2 class="author-header"><a
                                 href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                             {% if node.parent %}
-                                <span class="chip">
-                            {% avatar node.parent.author %}
+                                <div class="divider"></div>
+                                <div class="row z-depth-1-half">
+                            {% avatar node.parent.author 40 %}
                            <a
-                                   href="{% url "publications_gallery:publication_video_detail" publication_id=node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|truncatewords_html:10|safe }}</a>
-                        </span>
+                                   href="{% url "publications_gallery:publication_video_detail" publication_id=node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                        </div>
                             {% endif %}
                         </h2>
                         <div class="row">
                             <div class="parrafo comment">
                                 <p
                                         class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                                <div class="wrp-comment">{{ node.content|safe }}</div>
+                                <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                 <a href="#">+ Mostrar más</a>
