--- a/skyfolk/templates/emails/base_email.html
+++ b/skyfolk/templates/emails/base_email.html
@@ -86,7 +86,7 @@
           <div class="content" style="box-sizing: border-box; display: block; Margin: 0 auto; max-width: 580px; padding: 10px;">
 
             <!-- START CENTERED WHITE CONTAINER -->
-            <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">¡Tienes una nueva notificación en Skyfolk!</span>
+            <span class="preheader" style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">{% block header_content %}¡Tienes una nueva notificación en Skyfolk!{% endblock %}</span>
             <table class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 3px;">
 
               <!-- START MAIN CONTENT AREA -->
@@ -95,7 +95,7 @@
                   <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                     <tr>
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
-                        <h4 style="font-family: sans-serif; font-weight: normal; margin: 0; margin-bottom: 15px;">Parece que tienes nuevas notificaciones 🤔</h4>
+                        <h4 style="font-family: sans-serif; font-weight: normal; margin: 0; margin-bottom: 15px;">{% block title %}Parece que tienes nuevas notificaciones {% endblock %}</h4>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">{% block content %}{% endblock %}</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                           <tbody>
@@ -104,7 +104,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #2196F3; border-radius: 5px; text-align: center;"> <a href="http://skyfolk.net" target="_blank" style="display: inline-block; color: #ffffff; background-color: #2196F3; border: solid 1px #2196F3; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; border-color: #2196F3;">Ir a mi perfil</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #2196F3; border-radius: 5px; text-align: center;"> <a href="http://skyfolk.net" target="_blank" style="display: inline-block; color: #ffffff; background-color: #2196F3; border: solid 1px #2196F3; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; border-color: #2196F3;">Ir a Skyfolk</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
