--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -1,5 +1,6 @@
 {% load group_utils %}
 {% load avatar_tags %}
+{% load emoji_tags %}
 {% load app_filters %}
 {% load embed_video_tags %}
 {% load humanize %}
@@ -17,16 +18,17 @@
                         <h2 class="author-header"><a
                                 href="/profile/{{ pub.author.username }}">@{{ pub.author.username }}</a>
                             {% if pub.parent %}
-                                <span class="chip">
-                                                {% avatar pub.parent.author %}
-                                                <a href="/publication/{{ pub.parent.id }}">@{{ pub.parent.author }}: {{ pub.parent.content|truncatewords_html:10|safe }}</a>
-                                            </span>
+                                <div class="divider"></div>
+                                            <div class="row z-depth-1-half">
+                                                {% avatar pub.parent.author 40 %}
+                                                <a href="/publication/{{ pub.parent.id }}">@{{ pub.parent.author }}: {{ pub.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                                            </div>
                             {% endif %}
                         </h2>
                         <div class="row">
                             <div class="parrafo comment">
                                 <p class="blue-text text-darken-2 pub-created">{{ pub.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                                <div class="wrp-comment">{{ pub.content|safe }}</div>
+                                <div class="wrp-comment">{{ pub.content|emoji_replace|safe }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ pub.pk }}">
                                 <a href="#">+ Mostrar más</a>
