--- a/photologue/templates/photologue/videos/ajax_load_replies.html
+++ b/photologue/templates/photologue/videos/ajax_load_replies.html
@@ -31,14 +31,14 @@
                             <div class="divider"></div>
                                             <div class="row z-depth-1-half">
                                 {% avatar node.parent.author 40 %}
-                                <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                                <a href="/profile/{{ node.parent.author }}">@{{ node.parent.author }}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
                             </div>
                             {% endif %}
                         </h2>
                         <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
                         <div class="row publication-content">
                             <div class="parrafo comment">
-                                <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
+                                <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ node.pk }}">
                                 <a href="#">+ Mostrar más</a>
