--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -21,7 +21,7 @@
                             <div class="row z-depth-1-half">
                             {% avatar node.parent.author 40 %}
                            <a
-                            href="{% url "publications_gallery_groups:publication_photo_detail" node.parent.id %}">@{{node.parent.author}}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                            href="{% url "publications_gallery_groups:publication_photo_detail" node.parent.id %}">@{{node.parent.author}}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
                         </div>
                         {% endif %}
                     </h2>
@@ -29,7 +29,7 @@
                         <div class="parrafo comment">
                             <p
                             class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                            <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
+                            <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
                         </div>
                         <div class="show-more" id="show-comment-{{ node.pk }}">
                             <a href="#">+ Mostrar más</a>
