--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -21,7 +21,7 @@
                             <div class="row z-depth-1-half">
                             {% avatar node.parent.author 40 %}
                             <a
-                            href="/publication/{{ node.parent.id }}">@{{node.parent.author}}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                            href="/publication/{{ node.parent.id }}">@{{node.parent.author}}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
                             </div>
                         {% endif %}
                     </h2>
@@ -29,7 +29,7 @@
                         <div class="parrafo comment">
                             <p
                             class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                            <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
+                            <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
                         </div>
                         <div class="show-more" id="show-comment-{{ node.pk }}">
                             <a href="#">+ Mostrar más</a>
@@ -43,7 +43,7 @@
                             <span class="card-title"><a
                                 href="{% url 'user_profile:profile' node.shared_publication.author %}">@{{ node.shared_publication.author }}</a>
                                 <i class="blue-text text-darken-2"> {{ node.shared_publication.created|naturaltime }}</i></span>
-                                <p>{{ node.shared_publication.content|emoji_replace|safe }}</p>
+                                <p>{{ node.shared_publication.content|safe|emoji_replace }}</p>
                                 {% with node.shared_publication.images.all as images %}
                                 {% if images %}<br>
                                 <div class="row">
