--- a/skyfolk/templates/channels/new_video_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_video_group_publication_detail.html
@@ -23,7 +23,7 @@
                                 <div class="row z-depth-1-half">
                             {% avatar node.parent.author 40 %}
                            <a
-                                   href="{% url "publications_gallery:publication_video_detail" publication_id=node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                                   href="{% url "publications_gallery:publication_video_detail" publication_id=node.parent.id %}">@{{ node.parent.author }}: {{ node.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
                             </div>
                             {% endif %}
                         </h2>
