--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -21,14 +21,14 @@
                                 <div class="divider"></div>
                                             <div class="row z-depth-1-half">
                                                 {% avatar pub.parent.author 40 %}
-                                                <a href="/publication/{{ pub.parent.id }}">@{{ pub.parent.author }}: {{ pub.parent.content|emoji_replace|truncatewords_html:10|safe }}</a>
+                                                <a href="/publication/{{ pub.parent.id }}">@{{ pub.parent.author }}: {{ pub.parent.content|safe|emoji_replace|truncatewords_html:10|safe }}</a>
                                             </div>
                             {% endif %}
                         </h2>
                         <div class="row">
                             <div class="parrafo comment">
                                 <p class="blue-text text-darken-2 pub-created">{{ pub.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
-                                <div class="wrp-comment">{{ pub.content|emoji_replace|safe }}</div>
+                                <div class="wrp-comment">{{ pub.content|safe|emoji_replace }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ pub.pk }}">
                                 <a href="#">+ Mostrar más</a>
