Fix solved for first beta

--- a/dash/templates/dash/layouts/base_edit_layout.html
+++ b/dash/templates/dash/layouts/base_edit_layout.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            {% for placeholder in placeholders %
+            {% for placeholder in placeholders %}
                 <div id="{{ placeholder.html_id }}" class="placeholder {{ placeholder.html_class }}">
                     {{ placeholder.render_for_edit|safe }}
                 </div>
