--- a/feedback/templates/feedback/success.html
+++ b/feedback/templates/feedback/success.html
@@ -1,13 +1,13 @@
 {% extends "account/base.html" %}
 
 {% block head_title %}Comentarios recibidos{% endblock %}
-
+{% block menu %}{% endblock %}
 {% block content %}
     <div class="wrapper">
         <div class="row">
             <div class="col offset-l3 col l6 m12 s12">
-                <p>Gracias por enviarnos tus comentarios, los tendremos muy en cuenta para mejorar.</p>
-                <p>Hemos enviado una copia del mensaje a tu correo electrónico.</p>
+                <p class="flow-text">Gracias por enviarnos tus comentarios, los tendremos muy en cuenta para mejorar.</p>
+                <p class="flow-text">Hemos enviado una copia del mensaje a tu correo electrónico.</p>
             </div>
         </div>
     </div>
