--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -40,7 +40,7 @@
     <li>
         <div class="divider"></div>
     </li>
-    <li><a class="waves-effect shortcut-keyboard"><i class="material-icons">keyboard</i>Atajos</a></li>
+    <li><a class="waves-effect shortcut-keyboard hide-on-med-and-down"><i class="material-icons">keyboard</i>Atajos</a></li>
     <li><a href="/blog/" class="waves-effect"><i class="material-icons">comment</i>Blog</a></li>
     <li><a href="{% url 'account_logout' %}" class="subheader"><i class="material-icons">exit_to_app</i>Salir</a></li>
     <li>
