--- a/dash/templates/dash/delete_dashboard_workspace_ajax.html
+++ b/dash/templates/dash/delete_dashboard_workspace_ajax.html
@@ -6,18 +6,18 @@
     </div>
 
     <div class="content-body center">
-        <p>{% blocktrans with workspace.name as workspace_name %}¿Estás seguro de que quieres eliminar el espacio de trabajo
+        <p class="flow-text">{% blocktrans with workspace.name as workspace_name %}¿Estás seguro de que quieres <b>eliminar</b> el espacio de trabajo
             {{ workspace_name }}?{% endblocktrans %}</p>
         <form method="post" action="{% url 'dash:dash.delete_dashboard_workspace' workspace.pk %}"
               enctype="multipart/form-data" class="form-horizontal">
             {% csrf_token %}
+            <br/>
             <ul class="row content-listing generic-form center">
                 <li class="buttons control-group">
                     <div class="row">
                         <div class="col s12">
-                            <button type="submit" name="delete" class="btn white red-text">{% trans "Delete" %}</button>
+                            <button type="submit" name="delete" class="btn red white-text">{% trans "Delete" %}</button>
                             <input type="hidden" name="next" value="{% url 'dash:dash.edit_dashboard' workspace.slug %}"/>
-                            <button type="submit" class="btn blue">{% trans "Cancel" %}</button>
                         </div>
                     </div>
                 </li>
