--- a/skyfolk/templates/account/password_reset.html
+++ b/skyfolk/templates/account/password_reset.html
@@ -8,7 +8,7 @@
 {% block base-title %}
     <a class="left grey-text hide-on-med-and-down"><h6>{% trans "Password Reset" %}</h6></a>
 {% endblock %}
-
+{% block menu %}{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
